--- a/src/main/resources/views/create_user.fxml
+++ b/src/main/resources/views/create_user.fxml
@@ -4,20 +4,20 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.FlowPane?>
 
-<FlowPane fx:id="flowpane" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.UserNew"
+<FlowPane fx:id="flowpane" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.CreateUserController"
         hgap="10"
         vgap="10"
         prefHeight="100"
         prefWidth="400"
         alignment="CENTER">
-    <Label fx:id="labelName" text="Name: "/>
+    <Label fx:id="nameLabel" text="Name: "/>
 
-    <TextField fx:id="fieldName"/>
+    <TextField fx:id="nameTextField"/>
 
-    <Label fx:id="labelAge" text="Age: "/>
+    <Label fx:id="ageLabel" text="Age: "/>
 
-    <TextField fx:id="fieldAge"/>
+    <TextField fx:id="ageTextField"/>
 
-    <Button fx:id="createButt" text="Create" onAction="#handleCreateButton"/>
-    <Button fx:id="backButt" text="Back" onAction="#handleBackButton"/>
+    <Button fx:id="createButton" text="Create" onAction="#handleCreateButton"/>
+    <Button fx:id="backButton" text="Back" onAction="#handleBackButton"/>
 </FlowPane>
