--- a/src/main/resources/views/user_log_in.fxml
+++ b/src/main/resources/views/user_log_in.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.FlowPane?>
 <FlowPane xmlns:fx="http://javafx.com/fxml"
-          fx:controller="controllers.UserLogin"
+          fx:controller="controllers.UserLogInController"
           fx:id="flow_login"
           hgap="10"
           vgap="10">
@@ -16,13 +16,13 @@
 
      <VBox alignment="CENTER_RIGHT">
 
-         <Button fx:id="newUserButton"
-                 text="New"
-                 onAction="#handleNewButton"/>
+         <Button fx:id="createUserButton"
+                 text="Create User"
+                 onAction="#handleCreateUserButton"/>
 
          <Button fx:id="selectUserButton"
                  text="Select"
-                 onAction="#selectUserButton"/>
+                 onAction="#handleSelectUserButton"/>
 
      </VBox>
 
