--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.ChoiceBox?>
 
 <GridPane fx:id="gridpane" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.HomeController">
-    <TextArea text="home.fxml"></TextArea>
+    <TextField
+        fx:id="searchTextField"
+        GridPane.rowIndex="0"
+        GridPane.columnIndex="0"/>
+    <Button
+        fx:id="searchButton"
+        onAction="#handleSearchButton"
+        GridPane.rowIndex="0"
+        GridPane.columnIndex="1"/>
+    <ChoiceBox
+        fx:id="menuChoiceBox"
+        onAction="#handleMenuChoiceBox"
+        GridPane.rowIndex="0"
+        GridPane.columnIndex="2"/>
 </GridPane>
