--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -2,32 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
 
-<GridPane fx:id="gridpane" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.HomeController">
-    <TextField
-        fx:id="searchTextField"
-        GridPane.rowIndex="0"
-        GridPane.columnIndex="0"/>
-    <Button
-        fx:id="searchButton"
-        onAction="#handleSearchButton"
-        GridPane.rowIndex="0"
-        GridPane.columnIndex="1"
-        text="Search"/>
-    <ChoiceBox
-        fx:id="menuChoiceBox"
-        onAction="#handleMenuChoiceBox"
-        GridPane.rowIndex="0"
-        GridPane.columnIndex="2"/>
-    <StackPane
-        fx:id="contentStackPane"
-        GridPane.rowIndex="1"
-        GridPane.columnIndex="0"
-        GridPane.columnSpan="3">
-        <TextArea text="contentStackPane"></TextArea>
-    </StackPane>
-</GridPane>
+<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
+    <children>
+        <HBox spacing="12.0">
+            <children>
+                <TextField fx:id="searchTextField" />
+                <Button mnemonicParsing="false" text="Search" fx:id="searchButton"
+                        onAction="#handleSearchButton"/>
+                <ChoiceBox prefWidth="150.0" fx:id="menuChoiceBox"
+                           onAction="#handleMenuChoiceBox" />
+            </children>
+            <padding>
+                <Insets bottom="4.0" left="12.0" right="12.0" top="12.0" />
+            </padding>
+        </HBox>
+        <StackPane fx:id="contentStackPane"/>
+    </children>
+</VBox>
+
