--- a/src/main/resources/views/user_log_in.fxml
+++ b/src/main/resources/views/user_log_in.fxml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.FlowPane?>
-<FlowPane xmlns:fx="http://javafx.com/fxml"
-          fx:controller="controllers.UserLogInController"
-          fx:id="flow_login"
-          hgap="10"
-          vgap="10">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
 
-    <ListView fx:id="userListView"/>
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLogInController">
+    <children>
+        <ListView fx:id="userListView" layoutX="31.0" layoutY="116.0" prefHeight="400.0" prefWidth="200.0">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+        </ListView>
+        <VBox layoutX="265.0" layoutY="232.0" spacing="20.0">
+            <children>
+                <Button fx:id="selectUserButton" mnemonicParsing="false" prefWidth="80.0" text="Log in" onAction="#handleSelectUserButton"/>
+                <Button fx:id="createUserButton" mnemonicParsing="false" prefWidth="80.0" text="Create New" onAction="#handleCreateUserButton"/>
+            </children>
+            <padding>
+                <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
+            </padding>
+        </VBox>
+        <Label layoutX="131.0" layoutY="32.0" text="Calorie Counter">
+            <font>
+                <Font size="24.0" />
+            </font>
+        </Label>
+    </children>
+</AnchorPane>
 
-     <VBox alignment="CENTER_RIGHT">
-
-         <Button fx:id="createUserButton"
-                 text="Create User"
-                 onAction="#handleCreateUserButton"/>
-
-         <Button fx:id="selectUserButton"
-                 text="Select"
-                 onAction="#handleSelectUserButton"/>
-
-     </VBox>
-
-</FlowPane>
