--- a/src/main/resources/views/user_summary.fxml
+++ b/src/main/resources/views/user_summary.fxml
@@ -8,40 +8,88 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 
-<fx:root type="javafx.scene.layout.VBox"
-        xmlns:fx="http://javafx.com/fxml"
-        spacing="12"
-        BorderPane.alignment="CENTER">
-    <GridPane
-        alignment="center"
-        hgap="10"
-        vgap="10">
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
+    <VBox alignment="CENTER_LEFT"  spacing="10.0">
+        <children>
+            <Label text="Name Target">
+                <font>
+                    <Font size="24.0" />
+                </font>
+                <padding>
+                    <Insets top="20.0" />
+                </padding>
+            </Label>
+            <Label text="Weight Goals">
+                <font>
+                    <Font size="18.0" />
+                </font>
+            </Label>
+            <GridPane hgap="12.0" vgap="12.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <Label text="Goal Weight" />
+                    <Label GridPane.columnIndex="2" />
+                    <Label text="Total Progress" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Label text="Starting Weight" GridPane.columnIndex="2" />
+                    <Label text="Current Weight" GridPane.rowIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="3" />
+                    <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                </children>
+            </GridPane>
+            <Label text="Current Goals">
+                <font>
+                    <Font size="18.0" />
+                </font>
+                <padding>
+                    <Insets top="20.0" />
+                </padding>
+            </Label>
+            <GridPane hgap="12.0" vgap="12.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <Label text="Weekly target:" GridPane.columnIndex="2" />
+                    <Label text="Weekly Progress" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Label text="Daily Goal" />
+                    <Label text="Daily Total" GridPane.rowIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label text="Label" GridPane.columnIndex="3" />
+                    <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                </children>
+            </GridPane>
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="60.0">
+                <children>
+                    <Button mnemonicParsing="false" text="Edit Profile" />
+                </children>
+            </HBox>
+        </children>
         <padding>
-            <Insets top="25" right="25" bottom="10" left="25"/>
+            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
         </padding>
-
-        <Label text="Summary"
-            GridPane.columnSpan="2"
-            GridPane.rowIndex="0"
-            GridPane.columnIndex="0"/>
-
-        <Label text="Name: "
-               GridPane.rowIndex="1"
-               GridPane.columnIndex="0"/>
-        <Label fx:id="name_label"
-               GridPane.rowIndex="1"
-               GridPane.columnIndex="1"/>
-        <Label text="Age: "
-               GridPane.rowIndex="2"
-               GridPane.columnIndex="0"/>
-        <Label fx:id="age_label"
-               GridPane.rowIndex="2"
-               GridPane.columnIndex="1"/>
-    </GridPane>
-    <HBox spacing="12">
-        <Button fx:id="searchButton" text="Go Search"/>
-        <Button fx:id="recipeButton" text="Go Recipes"/>
-    </HBox>
+    </VBox>
 </fx:root>
 
 
