--- a/src/main/resources/views/search_results.fxml
+++ b/src/main/resources/views/search_results.fxml
@@ -14,7 +14,7 @@
                     <Font size="18"/>
                 </font>
             </Label>
-            <ListView prefHeight="300.0" prefWidth="350.0" />
+            <ListView fx:id="searchListView" prefHeight="300.0" prefWidth="350.0" />
             <HBox alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="0.0" spacing="12.0">
                 <children>
                     <Button mnemonicParsing="false" prefWidth="75.0" text="Back" />
