--- a/src/main/resources/views/search_results.fxml
+++ b/src/main/resources/views/search_results.fxml
@@ -17,8 +17,8 @@
             <ListView fx:id="searchListView" prefHeight="300.0" prefWidth="350.0" />
             <HBox alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="0.0" spacing="12.0">
                 <children>
-                    <Button mnemonicParsing="false" prefWidth="75.0" text="Back" />
-                    <Button mnemonicParsing="false" prefWidth="75.0" text="Get Details" />
+                    <Button fx:id="backButton" prefWidth="75.0" text="Back" />
+                    <Button fx:id="detailButton" prefWidth="75.0" text="Get Details" onAction="#handleDetailButton"/>
                 </children>
                 <VBox.margin>
                     <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
