--- a/src/main/resources/views/food_card.fxml
+++ b/src/main/resources/views/food_card.fxml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 
-<fx:root type="javafx.scene.layout.GridPane" xmlns:fx="http://javafx.com/fxml">
-    <Label
-        fx:id="foodLabel"
-        GridPane.rowIndex="0"
-        GridPane.columnIndex="0"/>
-    <Button
-        fx:id="viewButton"
-        onAction="#handleViewButton"
-        GridPane.rowIndex="0"
-        GridPane.columnIndex="1"/>
+<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
+    <VBox alignment="CENTER_LEFT" spacing="6.0" xmlns="http://javafx.com/javafx/8">
+        <children>
+            <Label fx:id="nameLabel" text="Name Target">
+                <font>
+                    <Font size="18.0" />
+                </font>
+            </Label>
+            <GridPane hgap="16.0" vgap="10.0">
+                <children>
+                    <Label text="kCal:" GridPane.rowIndex="1" />
+                    <Label text="Measure:" GridPane.rowIndex="2" />
+                    <Label text="cal_target" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label text="measure_target" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Button mnemonicParsing="false" prefWidth="60.0" text="Save" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+                </children>
+            </GridPane>
+        </children>
+        <padding>
+            <Insets bottom="16"/>
+        </padding>
+    </VBox>
 </fx:root>
+
+
