--- a/src/main/resources/views/daily_tracker.fxml
+++ b/src/main/resources/views/daily_tracker.fxml
@@ -2,7 +2,29 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
 
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import java.awt.Font?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
-    <TextArea text="daily_tracker.fxml"></TextArea>
+    <VBox alignment="CENTER_LEFT"  spacing="10.0">
+     <children>
+        <Label text="Daily Tracker">
+        </Label>
+        <Label text="Calories for today">
+        </Label>
+        <Label text="Calories over budget">
+        </Label>
+        <Label text="Total days tracked">
+        </Label>
+     </children>
+    </VBox>
 </fx:root>
