--- a/src/main/resources/views/search_results.fxml
+++ b/src/main/resources/views/search_results.fxml
@@ -7,29 +7,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.text.Font?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
-    <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox alignment="TOP_CENTER" spacing="15.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
         <children>
-            <Label text="Search Results">
+            <Label text="Search Screen">
                 <font>
-                    <Font size="18"/>
+                    <Font size="24.0" />
                 </font>
             </Label>
-            <ListView fx:id="searchListView" prefHeight="300.0" prefWidth="350.0" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="0.0" spacing="12.0">
-                <children>
-                    <Button fx:id="backButton" prefWidth="75.0" text="Test getFoods" onAction="#handleBackButton"/>
-                    <Button fx:id="detailButton" prefWidth="75.0" text="Get Details" onAction="#handleDetailButton"/>
-                </children>
-                <VBox.margin>
-                    <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
-                </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER">
-                <Pane fx:id="detailPane"/>
-            </HBox>
+            <ListView fx:id="searchListView" prefHeight="250.0" prefWidth="200.0" onMouseClicked="#handleMouseClick"/>
+            <Pane fx:id="foodPane" minHeight="225.0" minWidth="200.0" prefHeight="225.0" prefWidth="200.0" />
         </children>
         <padding>
-            <Insets bottom="60.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
         </padding>
     </VBox>
 </fx:root>
