--- a/src/main/resources/views/user_summary.fxml
+++ b/src/main/resources/views/user_summary.fxml
@@ -12,82 +12,153 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
-    <VBox alignment="CENTER_LEFT"  spacing="10.0">
+    <VBox alignment="CENTER" spacing="30.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
         <children>
-            <Label fx:id="nameLabel" text="Name Target">
-                <font>
-                    <Font size="24.0" />
-                </font>
-                <padding>
-                    <Insets top="20.0" />
-                </padding>
-            </Label>
-            <Label text="Weight Goals">
+            <Label fx:id="nameLabel" text="Name Targ">
                 <font>
                     <Font size="18.0" />
                 </font>
             </Label>
-            <GridPane hgap="12.0" vgap="12.0">
+            <GridPane hgap="16.0" vgap="8.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints vgrow="SOMETIMES" />
-                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <children>
-                    <Label text="Goal Weight" />
-                    <Label GridPane.columnIndex="2" />
-                    <Label text="Total Progress" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                    <Label text="Starting Weight" GridPane.columnIndex="2" />
-                    <Label text="Current Weight" GridPane.rowIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="3" />
-                    <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                    <Label text="Current weight:" GridPane.rowIndex="1">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label text="Starting Weight:" GridPane.rowIndex="3">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label text="Goal Weight:" GridPane.rowIndex="2">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label text="Last Weigh In:" GridPane.rowIndex="4">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="currentLabel" text="CWTarg" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="goalLabel" text="GWTarg" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="startLabel" text="SWTarg" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="dateLabel" text="Date Targ" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <Label text="Weight Goals">
+                                <font>
+                                    <Font size="18.0" />
+                                </font>
+                            </Label>
+                        </children>
+                        <opaqueInsets>
+                            <Insets />
+                        </opaqueInsets>
+                    </HBox>
+                    <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                        <children>
+                            <Button mnemonicParsing="false" text="Edit Profile" onAction="#handleEditButton"/>
+                        </children>
+                    </HBox>
+                    <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
+                        <children>
+                            <Button fx:id="weighButton" text="Lets Weigh In" onAction="#handleWeighButton"/>
+                        </children>
+                    </HBox>
                 </children>
             </GridPane>
-            <Label text="Current Goals">
-                <font>
-                    <Font size="18.0" />
-                </font>
-                <padding>
-                    <Insets top="20.0" />
-                </padding>
-            </Label>
-            <GridPane hgap="12.0" vgap="12.0">
+            <GridPane hgap="16.0" vgap="8.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
-                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints vgrow="SOMETIMES" />
-                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <children>
-                    <Label text="Weekly target:" GridPane.columnIndex="2" />
-                    <Label text="Weekly Progress" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                    <Label text="Daily Goal" />
-                    <Label text="Daily Total" GridPane.rowIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Label text="Label" GridPane.columnIndex="3" />
-                    <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                    <Label text="Today's Total:" GridPane.rowIndex="2">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label text="Calories Available:" GridPane.rowIndex="3">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="limitLabel" text="LimitTarg" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="totalLabel" text="TotalTarg" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <Label fx:id="availableLabel" text="AvailTarg" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <Label text="Daily Goals">
+                                <font>
+                                    <Font size="18.0" />
+                                </font>
+                            </Label>
+                        </children>
+                    </HBox>
+                    <Label text="Calorie Limit:" GridPane.rowIndex="1">
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </Label>
+                    <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <children>
+                            <Button text="Meal Time" onAction="#handleMealButton"/>
+                        </children>
+                    </HBox>
                 </children>
             </GridPane>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="60.0">
-                <children>
-                    <Button fx:id="editButton" text="Edit Profile" onAction="#handleEditButton"/>
-                </children>
-            </HBox>
         </children>
         <padding>
-            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
         </padding>
     </VBox>
 </fx:root>
