--- a/src/main/resources/views/app_login_screen.fxml
+++ b/src/main/resources/views/app_login_screen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLoginScreen">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AppLoginScreen">
     <children>
         <ListView fx:id="userListView" layoutX="31.0" layoutY="116.0" prefHeight="400.0" prefWidth="200.0">
             <padding>
