--- a/src/main/resources/views/food_screen.fxml
+++ b/src/main/resources/views/food_screen.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
     <VBox alignment="TOP_CENTER" spacing="15.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
         <children>
@@ -16,6 +18,11 @@
                 </font>
             </Label>
             <ListView fx:id="foodListView" prefHeight="250.0" prefWidth="200.0" onMouseClicked="#handleMouseClick"/>
+            <HBox alignment="CENTER_RIGHT">
+                <children>
+                    <Button text="Delete Food" onAction="#handleDeleteButton"/>
+                </children>
+            </HBox>
             <Pane fx:id="foodPane" minHeight="225.0" minWidth="200.0" prefHeight="225.0" prefWidth="200.0" />
         </children>
         <padding>
