--- a/src/main/resources/views/profile_screen.fxml
+++ b/src/main/resources/views/profile_screen.fxml
@@ -4,49 +4,69 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
-    <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox alignment="TOP_CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
         <children>
             <Label text="Edit Profile">
                 <font>
                     <Font size="24.0" />
                 </font>
+                <VBox.margin>
+                    <Insets bottom="80.0" />
+                </VBox.margin>
             </Label>
-            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
+            <GridPane hgap="10.0" maxWidth="325.0" vgap="15.0">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                </rowConstraints>
                 <children>
-                    <Label layoutX="95.0" layoutY="14.0" text="Name:">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Label>
-                    <Label layoutX="17.0" layoutY="54.0" text="Starting Weight:">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Label>
-                    <Label layoutX="43.0" layoutY="93.0" text="Goal Weight:">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Label>
-                    <TextField fx:id="nameTextField" layoutX="160.0" layoutY="15.0" />
-                    <TextField fx:id="startTextField" layoutX="160.0" layoutY="55.0" />
-                    <TextField fx:id="limitTextField" layoutX="160.0" layoutY="94.0" />
-                    <Button layoutX="241.0" layoutY="191.0" prefWidth="70.0" text="Save" onAction="#handleSaveButton"/>
-                    <Button layoutX="148.0" layoutY="191.0" prefWidth="70.0" text="Cancel" onAction="#handleCancelButton"/>
-                    <TextField layoutX="162.0" layoutY="130.0" />
-                    <Label layoutY="128.0" text="Daily Calorie Limit:">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Label>
+                    <Label text="Name:" />
+                    <Label text="Starting Weight:" GridPane.rowIndex="1" />
+                    <Label text="Goal Weight:" GridPane.rowIndex="2" />
+                    <Label text="Daily Calorie Limit:" GridPane.rowIndex="3" />
+                    <TextField fx:id="nameTextField" maxWidth="180.0" GridPane.columnIndex="1" />
+                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <children>
+                            <TextField fx:id="startWeightTextField" maxWidth="60.0" />
+                            <Label text="lbs." />
+                        </children>
+                    </HBox>
+                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <children>
+                            <TextField fx:id="goalWeightTextField" maxWidth="60.0" />
+                            <Label text="lbs." />
+                        </children>
+                    </HBox>
+                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <children>
+                            <TextField fx:id="calLimitTextField" maxWidth="100.0" />
+                            <Label text="kCal" />
+                        </children>
+                    </HBox>
+                    <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <children>
+                            <Button prefWidth="60.0" text="Cancel" onAction="#handleCancelButton"/>
+                            <Button prefWidth="60.0" text="Save" onAction="#handleSaveButton"/>
+                        </children>
+                    </HBox>
                 </children>
-            </AnchorPane>
+            </GridPane>
         </children>
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
