--- a/src/main/resources/views/weigh_in_screen.fxml
+++ b/src/main/resources/views/weigh_in_screen.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.geometry.Insets?>
 
+<?import util.NumFieldFx?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
     <VBox alignment="TOP_CENTER" spacing="15.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
         <children>
@@ -33,7 +34,7 @@
             <Label text="Enter Weight" />
             <HBox alignment="BOTTOM_CENTER" spacing="10.0">
                 <children>
-                    <TextField />
+                    <NumFieldFx fx:id="weightField"/>
                     <Label text="Lbs." />
                 </children>
                 <padding>
@@ -43,7 +44,7 @@
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
                 <children>
                     <Button prefWidth="80.0" text="Cancel" onAction="#handleCancelButton"/>
-                    <Button prefWidth="80.0" text="Set Weight" />
+                    <Button prefWidth="80.0" text="Set Weight" onAction="#handleWeighInButton"/>
                 </children>
             </HBox>
         </children>
