Made changes to program mentioned in the improvement Doc

--- a/src/main/resources/views/food_screen_card.fxml
+++ b/src/main/resources/views/food_screen_card.fxml
@@ -34,6 +34,7 @@
                 </font>
             </Label>
             <Button layoutX="208.0" layoutY="149.0" prefWidth="80" text="Eat" onAction="#handleEatButton"/>
+            <Label fx:id="messageLabel" layoutX="50.0" layoutY="153.0" />
         </children>
     </AnchorPane>
 </fx:root>
