--- a/src/main/resources/views/app_user_create_screen.fxml
+++ b/src/main/resources/views/app_user_create_screen.fxml
@@ -53,5 +53,10 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
         </GridPane>
+        <Label fx:id="messageLabel">
+            <font>
+                <Font size="16.0"/>
+            </font>
+        </Label>
     </children>
 </VBox>
