--- a/src/main/resources/views/profile_screen.fxml
+++ b/src/main/resources/views/profile_screen.fxml
@@ -68,6 +68,11 @@
                     </HBox>
                 </children>
             </GridPane>
+            <Label fx:id="messageLabel">
+                <font>
+                    <Font size="16"/>
+                </font>
+            </Label>
         </children>
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
